<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"/>

    <ListPreference
        android:defaultValue="@string/pref_unit_celsius_value"
        android:entries="@array/pref_unit_option_labels"
        android:entryValues="@array/pref_unit_option_values"
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label"/>

    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

</PreferenceScreen>